<resources>
    <string name="app_name">VayTree</string>
    <string name="text1">Nhận khoản vay từ</string>
    <string name="text2">đến 20.000.000 VND</string>
    <string name="text3">Số điện thoại </string>
    <string name="text4">Vui lòng nhập số điện thoại của bạn</string>
    <string name="text5">Vui lòng nhập mã xác minh</string>
    <string name="text6">Nhận mã xác minh </string>
    <string name="text7">Đăng ký ngay </string>
    <string name="text8"><![CDATA[Tôi đã đọc và đồng ý <font color="#F2CD00">Chính sách bảo mật</font>]]></string>
    <string name="text9">Chính sách bảo mật</string>
    <string name="text10">Chọn số tiền vay bạn cần</string>
    <string name="text11">VND</string>
    <string name="text12">Số tiền cho vay (VND)</string>
    <string name="text13">Thời gian hoàn trả</string>
    <string name="text14">Đăng ký khoản vay </string>
    <string name="text15">*Chúng tôi từ chối cung cấp các khoản vay cho những người dưới 18 tuổi </string>
    <string name="text16">Khách mới đăng ký chỉ cần 3 bước đơn giản</string>
    <string name="text17">Điền thông tin đăng ký trực tuyến</string>
    <string name="text18">Bạn cần điền thông tin cá nhân và tải lên ảnh chụp bạn và CCCD.</string>
    <string name="text19">Thẩm định đơn giản </string>
    <string name="text20">Trong vòng vài phút, bạn sẽ nhận được tin nhắn thông báo, tư vấn cho vay </string>
    <string name="text21">Rút tiền</string>
    <string name="text22">Số tiền vay được chuyển vào tài khoản ngân hàng của bạn</string>
    <string name="text23">Đơn hàng</string>
    <string name="text24">Mô tả khoản vay</string>
    <string name="text25">Của tôi</string>
    <string name="text26">Thông tin cá nhân đầy đủ</string>
    <string name="text27">Nhập họ tên của bạn</string>
    <string name="text28">Nhập số CCCD của bạn</string>
    <string name="text29">Ngày sinh </string>
    <string name="text30">Vui lòng chọn</string>
    <string name="text31">Giới tính </string>
    <string name="text32">Vui lòng điền trình độ học vấn của bạn</string>
    <string name="text33">Tình trạng hôn nhân</string>
    <string name="text34">FaceBook</string>
    <string name="text35">Zalo</string>
    <string name="text36">Bước tiếp theo </string>
    <string name="text37">Quay lại </string>
    <string name="text38">Vui lòng điền nghề nghiệp của bạn</string>
    <string name="text39">Tình hình thu nhập của bạn</string>
    <string name="text40">Vui lòng nhập tên công ty của bạn</string>
    <string name="text41">Số điện thoại nơi làm việc</string>
    <string name="text42">Vui lòng điền địa chỉ công ty</string>
    <string name="text43">Điền địa chỉ</string>
    <string name="text44">Vui lòng điền vào tỉnh thành của bạn</string>
    <string name="text45">Vui lòng nhập quận/ huyện của bạn</string>
    <string name="text46">Vui lòng điền địa chỉ cụ thể của bạn</string>
    <string name="text47">Thông tin gia đình</string>
    <string name="text48">Tên người liên lạc khẩn cấp/thành viên gia đình</string>
    <string name="text49">Số điện thoại người liên lạc khẩn cấp/gia đình</string>
    <string name="text50">Mối quan hệ với người liên lạc khẩn cấp</string>
    <string name="text51">Thông tin công việc</string>
    <string name="text52">Điền thông tin tài khoản nhận tiền</string>
    <string name="text53">Vui lòng điền tên thật của bạn</string>
    <string name="text54">Chọn tên thẻ ngân hàng</string>
    <string name="text55">Vui lòng tải lên mặt trước CCCD của bạn</string>
    <string name="text56">Vui lòng tải lên mặt sau CCCD của bạn</string>
    <string name="text57">Hãy đảm bảo rằng ảnh bạn tải lên rõ nét\nKhông tải ảnh lên mà không có giấy tờ tùy thân liên quan</string>
    <string name="text58">Ảnh tự sướng</string>
    <string name="text59">Vui lòng hoàn thành nhận dạng khuôn mặt, kết quả chỉ được sử dụng cho khoản vay này và không được sử dụng cho bất kỳ mục đích khác.\n\nLưu ý: Vui lòng thực hiện trong điều kiện ánh sáng tốt. Nếu không được, hãy tắt app và mở lại để thử lại.</string>
    <string name="text60">Số tiền vay</string>
    <string name="text61"><![CDATA[Bằng cách nhấp vào <b>“Đăng ký khoản vay”</b>Nút ấn , <u><b>bạn đồng ý với đi kèm Thỏa thuận vay。</b></u>]]></string>
    <string name="text142">Thỏa thuận vay。</string>
    <string name="text143">“Đăng ký khoản vay”</string>
    <string name="text144">Nút ấn , bạn đồng ý với đi kèm</string>
    <string name="text62">Chu kỳ vay</string>
    <string name="text63">Lãi suất</string>
    <string name="text64">Tổng số tiền phải trả</string>
    <string name="text65">Tên Ngân hàng</string>
    <string name="text66">Tài khoản ngân hàng</string>
    <string name="text67">Đăng ký khoản vay</string>
    <string name="text68">*Số tiền giải ngân thực tế được xác định dựa trên tình hình tín dụng của bạn</string>
    <string name="text69">Quay lại </string>
    <string name="text70">Đang xét duyệt</string>
    <string name="text71">Đơn trả nợ</string>
    <string name="text72">Đã hoàn trả</string>
    <string name="text73">Chi tiết đơn hàng</string>
    <string name="text74">Hoàn trả</string>
    <string name="text75">Đơn hàng</string>
    <string name="text76">Số tiền phải trả </string>
    <string name="text77">Tiền gốc phải trả</string>
    <string name="text78">Phí quản lý tài khoản</string>
    <string name="text79">Phí phê duyệt</string>
    <string name="text80">Phí phục vụ</string>
    <string name="text81">Lãi suất phải trả</string>
    <string name="text82">Phí trễ hạn</string>
    <string name="text83">Xác nhận</string>
    <string name="text84">Phương thức hoàn trả </string>
    <string name="text85">Tài khoản nhận </string>
    <string name="text86">Thanh toán ngoại tuyến</string>
    <string name="text87">*Vui lòng chọn "tài khoản nhận" để thanh toán, \nĐể nhanh chóng tất toán tài khoản và tiếp tục khoản vay</string>
    <string name="text88">LƯU Ý：Tài khoản này chỉ định duy nhất tài khoản người nhận ở trên. Vui lòng kiểm tra tên và số thẻ ngân hàng của bạn khi chuyển tiền và nhớ ghi lại tên và số điện thoại di động khi thanh toán.</string>
    <string name="text89">Nhận thanh toán</string>
    <string name="text90">Tài khoản ngân hàng</string>
    <string name="text91">Ngân hàng</string>
    <string name="text92">Chi nhánh </string>
    <string name="text93">Bạn có thể sử dụng thông tin trên để trả nợ tại ngân hàng gần nhất hoặc thông qua Ngân hàng Internet. \nCác giao dịch ngân hàng có thể bị tạm dừng vào thứ Bảy, Chủ Nhật và ngày lễ, vì vậy vui lòng sắp xếp việc thanh toán của bạn một cách hợp lý để tránh thanh toán quá hạn vì lý do này.</string>
    <string name="text94">Thông tin cá nhân </string>
    <string name="text95">Thông tin ngân hàng </string>
    <string name="text96">Hotline：</string>
    <string name="text97">Đăng xuất</string>
    <string name="text98">Mô tả khoản vay</string>
    <string name="text99">Vui lòng đọc kỹ hướng dẫn vay VayTree để nhanh chóng nhận được nhiều khoản vay。</string>
    <string name="text100">Bước tiếp theo</string>
    <string name="text101">Số tiền cho vay</string>
    <string name="text102">Số tiền nhận </string>
    <string name="text103">Thời hạn vay</string>
    <string name="text104">Phí quản lý tài khoản</string>
    <string name="text105">Đơn đăng ký của bạn tạm thời không thể thông qua. Vui lòng nộp lại đơn đăng ký của bạn sau %s ngày.</string>
    <string name="text106">xét duyệt thất bại</string>
    <string name="text107">Đăng ký lại</string>
    <string name="text108">Tình trạng：xét duyệt thông qua </string>
    <string name="text109">Hạn mức phê duyệt：</string>
    <string name="text110">Thời gian phê duyệt：</string>
    <string name="text111">Tình trạng：Khoản vay đã được thanh toán</string>
    <string name="text112">Tiếp tục vay </string>
    <string name="text113">Khoản vay đã quá hạn %d ngày</string>
    <string name="text114">Đang xét duyệt</string>
    <string name="text115">Đang thanh toán</string>
    <string name="text116">Lỗi thanh toán</string>
    <string name="text117">Lỗi không xác định</string>
    <string name="text118">Đang chờ hoàn trả</string>
    <string name="text119">Số tiền phải trả：</string>
    <string name="text120">Cần sửa đổi liên hệ dịch vụ khách hàng</string>
    <string name="text121">Liên hệ với dịch vụ khách hàng để xóa</string>
    <string name="text123">Thời gian hoàn trả：</string>
    <string name="text124">Sao chép thành công</string>
    <string name="text125">Sao chép</string>
    <string name="text126">Ngày</string>
    <string name="text127">Số tiền đã trả：</string>
    <string name="text128">Đang giải ngân </string>
    <string name="text129">Tài khoản thanh toán </string>
    <string name="text130">Tên người nhận</string>
    <string name="text131">Tên ngân hàng của người thụ hưởng</string>
    <string name="text132">Tên chi nhánh </string>
    <string name="text133">VayTree Đồng ý</string>
    <string name="text134">Thu thập một số dữ liệu của bạn cho mục\nđích quản lý rủi ro và gian lận</string>
    <string name="text135">·Máy ảnh</string>
    <string name="text136">Đồng ý và tiếp tục</string>
    <string name="text137">Loading</string>
    <string name="text138">Vui lòng điền đầy đủ thông tin</string>
    <string name="text139">Quay lại</string>
    <string name="text140">Xác nhận</string>
    <string name="text141">Ngày đến hạn：</string>
    <string name="text149">đồng ý</string>
    <string name="text150">không đồng ý</string>
    <string name="text152">Để xem xét điều kiện đủ của bạn và đẩy nhanh quá trình thanh toán khoản vay, chúng tôi yêu cầu những quyền sau.</string>
    <string name="text153">Sự cho phép</string>
    <string name="text154">Xóa tài khoản</string>
    <string name="text156">Phí xử lý</string>
</resources>