<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bj"
    tools:context=".ui.activity.RepaymentActivity">

    <include
        android:id="@+id/head_id"
        layout="@layout/head_layout" />

    <TextView
        android:id="@+id/tv1_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_30"
        android:text="@string/text76"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/head_id" />

    <TextView
        android:id="@+id/tv2_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_15"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv1_id" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_20"
        android:layout_marginTop="@dimen/space_25"
        android:layout_marginEnd="@dimen/space_20"
        android:background="@drawable/shape_white_20"
        android:paddingStart="@dimen/space_20"
        android:paddingTop="@dimen/space_30"
        android:paddingEnd="@dimen/space_20"
        android:paddingBottom="@dimen/space_30"
        app:layout_constraintTop_toBottomOf="@id/tv2_id">

        <TextView
            android:id="@+id/tv3_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text77"
            android:textColor="#006F11"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_principal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv4_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:text="@string/text78"
            android:textColor="#006F11"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv3_id" />

        <TextView
            android:id="@+id/tv_administrative_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv3_id" />


        <TextView
            android:id="@+id/tv5_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:text="@string/text79"
            android:textColor="#006F11"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv4_id" />

        <TextView
            android:id="@+id/tv_approval_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_5"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv4_id" />

        <TextView
            android:id="@+id/tv6_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:text="@string/text80"
            android:textColor="#006F11"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv5_id" />

        <TextView
            android:id="@+id/tv_service_charge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_5"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv5_id" />

        <TextView
            android:id="@+id/tv7_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:text="@string/text81"
            android:textColor="#006F11"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv6_id" />

        <TextView
            android:id="@+id/tv_interest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_5"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv6_id" />

        <TextView
            android:id="@+id/tv8_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:text="@string/text82"
            android:textColor="#006F11"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv13_id" />

        <TextView
            android:id="@+id/tv_demurrage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_5"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv13_id" />

        <TextView
            android:id="@+id/tv13_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:text="@string/text156"
            android:textColor="@color/f006"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv7_id" />

        <TextView
            android:id="@+id/tv_commission_charge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv7_id" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_affirm"
        android:layout_width="@dimen/space_240"
        android:layout_height="@dimen/space_40"
        android:layout_marginTop="@dimen/space_50"
        android:background="@drawable/shape_f2cd00_5"
        android:gravity="center"
        android:text="@string/text83"
        android:textColor="#006F11"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_id" />

    <TextView
        android:id="@+id/tv_close"
        android:layout_width="@dimen/space_240"
        android:layout_height="@dimen/space_40"
        android:layout_marginTop="@dimen/space_10"
        android:background="@drawable/shape_white_5_"
        android:gravity="center"
        android:text="@string/text69"
        android:textColor="#006F11"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_affirm" />
</androidx.constraintlayout.widget.ConstraintLayout>