<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bj"
    tools:context=".ui.activity.ModeRepaymentActivity">

    <include
        android:id="@+id/head_id"
        layout="@layout/head_layout" />

    <TextView
        android:id="@+id/tv_account_credited"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_40"
        android:layout_marginStart="@dimen/space_40"
        android:layout_marginTop="@dimen/space_50"
        android:layout_marginEnd="@dimen/space_40"
        android:background="@drawable/shape_white_5_"
        android:gravity="center"
        android:text="@string/text85"
        android:textColor="#006F11"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/head_id" />

    <TextView
        android:id="@+id/tv_online_repayment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_40"
        android:layout_marginStart="@dimen/space_40"
        android:layout_marginTop="@dimen/space_15"
        android:layout_marginEnd="@dimen/space_40"
        android:background="@drawable/shape_f2cd00_5"
        android:gravity="center"
        android:text="@string/text86"
        android:visibility="gone"
        android:textColor="#006F11"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_account_credited" />

    <TextView
        android:id="@+id/tv1_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_40"
        android:layout_marginTop="@dimen/space_35"
        android:layout_marginEnd="@dimen/space_40"
        android:gravity="center"
        android:text="@string/text87"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_online_repayment" />

    <TextView
        android:id="@+id/tv_close"
        android:layout_width="@dimen/space_240"
        android:layout_height="@dimen/space_40"
        android:layout_marginTop="@dimen/space_10"
        android:layout_marginBottom="@dimen/space_50"
        android:background="@drawable/shape_white_5_"
        android:gravity="center"
        android:text="@string/text69"
        android:textColor="#006F11"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>